# se-toolkit-lab-8

./: .env.docker.example  REPORT.md  docker-compose.yml  pyproject.toml
caddy/: Caddyfile
lab/tasks/required/: task-2.md  task-3.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  config.json  config.resolved.json  entrypoint.py  pyproject.toml
nanobot/workspace/sessions/: cli_direct.jsonl  cli_task1a-loop.jsonl  cli_task1b-health.jsonl  cli_task1b-labs.jsonl  cli_task1b-pass-rates.jsonl  cli_task1c.jsonl  cli_verify.jsonl  webchat_034b1cf3-8186-4d1a-8248-41652ebc232f.jsonl  webchat_3574db13-e09b-4162-a986-448c7bdbfad5.jsonl  webchat_42604791-2c07-48b8-b9dc-6556a3ba1876.jsonl  webchat_5567cb1d-97e2-464d-9aee-0a2127f26c32.jsonl  webchat_60681d86-32f3-4028-abf6-4c42974eee03.jsonl  webchat_6d7d9740-040d-45c7-820d-bd3a54f13866.jsonl  webchat_7b280a03-6d43-4fcc-9f6a-9042625e7a2e.jsonl  webchat_7ca162c6-7044-40a9-9cb3-b471f1309faf.jsonl  webchat_81370e49-a026-4d8f-82e6-e1cb1ac22953.jsonl  webchat_a941a720-dd43-4887-85b1-d85167bc59f0.jsonl  webchat_d12f1c3c-17b7-49b3-a8f9-1420f665a95e.jsonl  webchat_d16272f0-d4a3-4131-8c9f-5a572e0a01cd.jsonl  webchat_d26e93e5-df53-4f68-8e2a-c055fa33e85e.jsonl  webchat_d4146809-7bae-411d-8c8a-f2a7830418f5.jsonl  webchat_ef10ebb9-6573-48f5-ac4d-2063a4b82163.jsonl  webchat_f43631f5-8876-4a58-a58c-725d604d2c7f.jsonl  webchat_f5b0b704-d8f2-40d4-815f-10bd931b8a65.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
