[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot agent for LMS"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "lms-mcp",
    "mcp-obs",
    "mcp-webchat",
    "nanobot-ai @ https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { workspace = true, editable = true }
nanobot-webchat = { workspace = true, editable = true }
mcp-webchat = { workspace = true, editable = true }
mcp-obs = { workspace = true, editable = true }
